--- a/lab/lab04_class_using_several_classifiers/lab04_class_using_several_classifiers.ipynb
+++ b/lab/lab04_class_using_several_classifiers/lab04_class_using_several_classifiers.ipynb
@@ -92,6 +92,7 @@
     "random_state = 42\n",
     "np.random.seed(random_state) # this sets the random sequence. Setting only this the repeatability is guaranteed\n",
     "                             # only if we re-execute the entire notebook\n",
+    "random_state=None\n",
     "cv = 3   # number of cross-validation splits"
    ]
   },
@@ -250,14 +251,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "target = 'Exited'\n",
+    "X = df.drop(target, axis=1)#dataset.data\n",
+    "y = df[target]"
+   ]
   },
   {
    "attachments": {},
@@ -272,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -341,11 +346,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "scorings = ['accuracy','precision_macro','recall_macro','f1_macro']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'dt': 38, 'nb': 9, 'lp': 4, 'svc': 9, 'knn': 6, 'adb': 20, 'rf': 30}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# for development only\n",
+    "from sklearn.model_selection import ParameterGrid\n",
+    "trials = {lbl: len(list(ParameterGrid(models[lbl]['param']))) for lbl in models.keys()}\n",
+    "trials"
    ]
   },
   {
@@ -361,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -377,9 +405,6 @@
     }
    ],
    "source": [
-    "target = 'Exited'\n",
-    "X = df.drop(target, axis='columns')\n",
-    "y = df[target]\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X, y, test_size=ts)\n",
     "print(\"Training on {} examples\".format(len(X_train)))"
@@ -402,7 +427,7 @@
     "\n",
     "### Steps\n",
     "\n",
-    "- prepare an empty list `clfs` to store all the fitted models\n",
+    "- prepare an empty list `clfs` to store all the fitte models\n",
     "- prepare an empty DataFrame which will collect the results of the fittings with each combination of parameters\n",
     "    - dataframe columns are `'scoring','model','best_params','accuracy','precision_macro','recall_macro','f1_macro'`\n",
     "- loop"
@@ -410,12 +435,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "clfs = []\n",
-    "results = pd.DataFrame(columns=['scoring','model','best_params','accuracy','precision_macro','recall_macro','f1_macro'])"
+    "results = pd.DataFrame(columns=['scoring','model','best_params'#,'fit+score_time'\n",
+    "                                ,'accuracy','precision_macro','recall_macro','f1_macro'])"
    ]
   },
   {
@@ -473,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true,
     "slideshow": {
@@ -483,206 +509,25 @@
    "outputs": [],
    "source": [
     "for scoring in scorings:\n",
-    "    for model in model_lbls:\n",
-    "        clf = GridSearchCV(estimator=models[model]['estimator']\n",
-    "                        , param_grid=models[model]['param']\n",
-    "                        , cv=cv\n",
-    "                        , scoring=scoring\n",
-    "        )\n",
-    "        clf.fit(X_train,y_train)\n",
+    "    for m in model_lbls:\n",
+    "        clf = GridSearchCV(models[m]['estimator'], models[m]['param'], cv=cv,\n",
+    "                           scoring = scoring, \n",
+    "                           \n",
+    "                           )\n",
+    "\n",
+    "        clf.fit(X_train, y_train)   \n",
     "        clfs.append(clf)\n",
     "        y_true, y_pred = y_test, clf.predict(X_test)\n",
-    "        cr = classification_report(y_true,y_pred, output_dict=True)\n",
-    "        results.loc[len(results)] = [\n",
-    "              scoring\n",
-    "            , models[model]['name']\n",
-    "            , clf.best_params_\n",
-    "            , cr['accuracy']\n",
-    "            , cr['macro avg']['precision']\n",
-    "            , cr['macro avg']['recall']\n",
-    "            , cr['macro avg']['f1-score']\n",
-    "        ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>scoring</th>\n",
-       "      <th>model</th>\n",
-       "      <th>best_params</th>\n",
-       "      <th>accuracy</th>\n",
-       "      <th>precision_macro</th>\n",
-       "      <th>recall_macro</th>\n",
-       "      <th>f1_macro</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>accuracy</td>\n",
-       "      <td>Decision Tree</td>\n",
-       "      <td>{'class_weight': None, 'max_depth': 4}</td>\n",
-       "      <td>0.871761</td>\n",
-       "      <td>0.799722</td>\n",
-       "      <td>0.700355</td>\n",
-       "      <td>0.733511</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>accuracy</td>\n",
-       "      <td>Gaussian Naive Bayes</td>\n",
-       "      <td>{'var_smoothing': 1e-11}</td>\n",
-       "      <td>0.846512</td>\n",
-       "      <td>0.811379</td>\n",
-       "      <td>0.574027</td>\n",
-       "      <td>0.588165</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>precision_macro</td>\n",
-       "      <td>Decision Tree</td>\n",
-       "      <td>{'class_weight': None, 'max_depth': 4}</td>\n",
-       "      <td>0.871761</td>\n",
-       "      <td>0.799722</td>\n",
-       "      <td>0.700355</td>\n",
-       "      <td>0.733511</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>precision_macro</td>\n",
-       "      <td>Gaussian Naive Bayes</td>\n",
-       "      <td>{'var_smoothing': 1e-11}</td>\n",
-       "      <td>0.846512</td>\n",
-       "      <td>0.811379</td>\n",
-       "      <td>0.574027</td>\n",
-       "      <td>0.588165</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>recall_macro</td>\n",
-       "      <td>Decision Tree</td>\n",
-       "      <td>{'class_weight': 'balanced', 'max_depth': 4}</td>\n",
-       "      <td>0.724252</td>\n",
-       "      <td>0.649313</td>\n",
-       "      <td>0.743567</td>\n",
-       "      <td>0.651403</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>recall_macro</td>\n",
-       "      <td>Gaussian Naive Bayes</td>\n",
-       "      <td>{'var_smoothing': 1e-11}</td>\n",
-       "      <td>0.846512</td>\n",
-       "      <td>0.811379</td>\n",
-       "      <td>0.574027</td>\n",
-       "      <td>0.588165</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>f1_macro</td>\n",
-       "      <td>Decision Tree</td>\n",
-       "      <td>{'class_weight': None, 'max_depth': 4}</td>\n",
-       "      <td>0.871761</td>\n",
-       "      <td>0.799722</td>\n",
-       "      <td>0.700355</td>\n",
-       "      <td>0.733511</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>f1_macro</td>\n",
-       "      <td>Gaussian Naive Bayes</td>\n",
-       "      <td>{'var_smoothing': 1e-11}</td>\n",
-       "      <td>0.846512</td>\n",
-       "      <td>0.811379</td>\n",
-       "      <td>0.574027</td>\n",
-       "      <td>0.588165</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           scoring                 model  \\\n",
-       "0         accuracy  Decision Tree          \n",
-       "1         accuracy  Gaussian Naive Bayes   \n",
-       "2  precision_macro  Decision Tree          \n",
-       "3  precision_macro  Gaussian Naive Bayes   \n",
-       "4     recall_macro  Decision Tree          \n",
-       "5     recall_macro  Gaussian Naive Bayes   \n",
-       "6         f1_macro  Decision Tree          \n",
-       "7         f1_macro  Gaussian Naive Bayes   \n",
-       "\n",
-       "                                    best_params  accuracy  precision_macro  \\\n",
-       "0        {'class_weight': None, 'max_depth': 4}  0.871761         0.799722   \n",
-       "1                      {'var_smoothing': 1e-11}  0.846512         0.811379   \n",
-       "2        {'class_weight': None, 'max_depth': 4}  0.871761         0.799722   \n",
-       "3                      {'var_smoothing': 1e-11}  0.846512         0.811379   \n",
-       "4  {'class_weight': 'balanced', 'max_depth': 4}  0.724252         0.649313   \n",
-       "5                      {'var_smoothing': 1e-11}  0.846512         0.811379   \n",
-       "6        {'class_weight': None, 'max_depth': 4}  0.871761         0.799722   \n",
-       "7                      {'var_smoothing': 1e-11}  0.846512         0.811379   \n",
-       "\n",
-       "   recall_macro  f1_macro  \n",
-       "0      0.700355  0.733511  \n",
-       "1      0.574027  0.588165  \n",
-       "2      0.700355  0.733511  \n",
-       "3      0.574027  0.588165  \n",
-       "4      0.743567  0.651403  \n",
-       "5      0.574027  0.588165  \n",
-       "6      0.700355  0.733511  \n",
-       "7      0.574027  0.588165  "
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(clfs)"
+    "        # y_preds.append(y_pred)\n",
+    "        cr = classification_report(y_true,y_pred, output_dict=True\n",
+    "                                   , zero_division=1\n",
+    "                                   )\n",
+    "        results.loc[len(results)] = [scoring,models[m]['name'],clf.best_params_\n",
+    "                                    # ,(clf.cv_results_['mean_fit_time'].sum()+clf.cv_results_['mean_score_time'].sum())*n_splits\n",
+    "                                    ,cr['accuracy']\n",
+    "                                    ,cr['macro avg']['precision']\n",
+    "                                    ,cr['macro avg']['recall']\n",
+    "                                    ,cr['macro avg']['f1-score']]"
    ]
   },
   {
@@ -895,7 +740,16 @@
      "output_type": "display_data"
     }
    ],
-   "source": []
+   "source": [
+    "for score in scorings:\n",
+    "    scoring_filter = score\n",
+    "    display(results[results.scoring==scoring_filter]\\\n",
+    "                .sort_values(by=scoring_filter,ascending=False)\\\n",
+    "                .drop('scoring',axis=1)\\\n",
+    "                .style.format(precision=3)\\\n",
+    "                    .set_caption('Results for scoring \"{}\"'.format(scoring_filter))\n",
+    "    )"
+   ]
   },
   {
    "attachments": {},
@@ -958,7 +812,15 @@
      "output_type": "display_data"
     }
    ],
-   "source": []
+   "source": [
+    "for score in scorings:\n",
+    "    scoring_filter = score\n",
+    "    # bests[score] = results.loc[results.scoring==scoring_filter,scoring_filter].idxmax(axis=0)\n",
+    "    best_row = results.loc[results.scoring==scoring_filter,scoring_filter].idxmax(axis=0)\n",
+    "    disp = ConfusionMatrixDisplay.from_estimator(X=X_test, y=y_test, estimator = clfs[best_row])\n",
+    "    # disp.ax_.set_title(\"Best Model for {}: {}\".format(score,results.at[bests[score],'model']))\n",
+    "    disp.ax_.set_title(\"Best Model for {}: {}\".format(score,results.at[best_row,'model']))"
+   ]
   }
  ],
  "metadata": {
@@ -978,7 +840,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
