--- a/lab/Lab05_regression/linear_regression_example_FoodUK2014_nocode.ipynb
+++ b/lab/Lab05_regression/linear_regression_example_FoodUK2014_nocode.ipynb
@@ -697,6 +697,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "target = 'qmeat_hhsize_ratio'\n",
         "# to fill"
       ]
     },
@@ -1508,7 +1509,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.6"
+      "version": "3.9.13 (main, Oct 13 2022, 16:12:30) \n[Clang 12.0.0 ]"
     },
     "vscode": {
       "interpreter": {
