--- a/MachineLearning/lab/Lab-topic-3a-class-dt-hold-out/lab3a-class-dt-hold-out-nocode.ipynb
+++ b/MachineLearning/lab/Lab-topic-3a-class-dt-hold-out/lab3a-class-dt-hold-out-nocode.ipynb
@@ -217,7 +217,7 @@
     "\n",
     "The ``class`` column can be considered the target array\n",
     "\n",
-    "Assign the target column name to a variable `target"
+    "Assign the target column name to a variable `target`"
    ]
   },
   {
