--- a/MachineLearning/lab/Lab-topic3b-model-selection-cv/lab3b-class-dt-grid-search-cv_nocode.ipynb
+++ b/MachineLearning/lab/Lab-topic3b-model-selection-cv/lab3b-class-dt-grid-search-cv_nocode.ipynb
@@ -76,11 +76,13 @@
    },
    "source": [
     "### Prepare the environment\n",
-    "The `dataset` module contains, among others, a few sample datasets.\n",
     "\n",
-    "See this [page](http://scikit-learn.org/stable/datasets/index.html) for reference\n",
-    "\n",
-    "Prepare the data and the target in X and y. Set `ts`. Set the random state"
+    "- Import all the relavant libraries\n",
+    "- set the `random_state`\n",
+    "- set the fraction to use for training `train_size`\n",
+    "- set the number of cross-validation splits `n_splits`\n",
+    "- set the url for the data `data_url`\n",
+    "- set the name of the `target`"
    ]
   },
   {
