--- a/MachineLearning/lab/Lab-topic-3c-using-several-class/lab3c-using-several-class-nocode.ipynb
+++ b/MachineLearning/lab/Lab-topic-3c-using-several-class/lab3c-using-several-class-nocode.ipynb
@@ -100,7 +100,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. Import the dataset"
+    "# 1. Import the dataset\n",
+    "\n",
+    "`churn-analysis.csv` from the `data` folder"
    ]
   },
   {
